--- a/packages/styles/select.css
+++ b/packages/styles/select.css
@@ -7,7 +7,11 @@
 .Field__select {
   display: flex;
   flex-direction: column;
-  margin-bottom: var(--space-smallest);
+  margin-bottom: var(--space-small);
+}
+
+.Field__select .Error {
+  min-height: unset;
 }
 
 .Field__select--disabled {
